--- a/.htaccess
+++ b/.htaccess
@@ -17,4 +17,6 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    php_value upload_max_filesize 100M
+   php_value post_max_size 100M
 </IfModule>
