--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
+CKAN_URL=http://data.kpbos.gov.pk/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
